# itf_generator_cpp_to_cpp_by_cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  config  core_dump.itf_generator.263690  core_dump.itf_generator.264429  core_dump.itf_generator.264794  core_dump.itf_generator.265439  core_dump.itf_generator.265845  core_dump.itf_generator.266069  format_files.sh  start.sh
_cmake/: C-commands.cmake  C-flags.cmake  C-libs.cmake  C-macros.cmake  C-packing.cmake  C-requirements.cmake  C-test.cmake
_cmake/toolchains/: mingw-w64.cmake
_core/_inc/: static_itf_files.h  test.hpp  util.h
_core/_src/: main.cpp
_libs/math/: CMakeLists.txt
_libs/math/_core/_inc/: math.h
_libs/math/_core/_src/: math.cpp
_test/: test.cpp
input/: itf_1.json  test.json
output/: test.hpp
